tests/miniJava/neg/006728_mutation.MiniJava
class java { public true static void Main ( String [ ] java ) { { } } }
